# sharing-service-facebook

./: Makefile.am  antigen.sh  configure.ac
data/: Makefile.am  facebook.service.xml.in
debian/: changelog  control  copyright  rules  sharing-service-facebook.prerm
src/: Makefile.am  places.c  places.h  service.c
